<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--SETTINGS STRINGS THAT NOT USED IN UI-->
    <string name="IMAGE_CACHE_FOLDER_KEY">IMAGE_CACHE_FOLDER</string>
    <string name="ALBUMS_CACHE_FOLDER_KEY">ALBUMS_CACHE_FOLDER</string>
    <string name="DEFAULT_LAGUAGE_KEY">DEFAULT_LAGUAGE_KEY</string>
    <string name="SONG_FOLDER_CACHE_KEY">SONG_FOLDER_CACHE_KEY</string>
    <string name="DOWNLOAD_FOLDER_CACHE_KEY">DOWNLOAD_FOLDER_CACHE_KEY</string>
    <string name="USE_ONE_FOlDER_KEY">USE_ONE_FOlDER_KEY</string>

    <string-array name="preference_languages_titles">
        <item>Russian</item>
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="preference_languages_values">
        <item>ru</item>
        <item>en</item>
        <item>fr</item>
    </string-array>
    <!--CLOSE SETTINGS STRINGS THAT NOT USED IN UI-->

    <!--Some tips in app-->
    <string name="app_name">FMS</string>
    <string name="network_unavailable">Network unavailable. Please check your connection.</string>
    <string name="request_error">Error during retrieving information.</string>
    <string name="empty_result">Search has returned 0 rows.</string>
    <string name="search_hint">Enter a search request</string>
    <string name="empty_list">No items to show</string>

    <!--  Tabs in SearchFragment  -->
    <string name="artist">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>

    <!--  Tabs in the MainActivit  y-->
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>

    <!--   Preferences !!!!!!!  -->
    <string name="pref_storage_title">Storage settings:</string>
    <string name="pref_common_title">Common settings:</string>

    <string name="pref_use_one_folder">Use one folder</string>
    <string name="pref_use_one_folder_descr">All file will be saved in separated folders like songs, albums, etc...</string>

    <string name="pref_download_folder">Download folder</string>
    <string name="pref_download_folder_descr">Folder for saving all files after downloading</string>

    <string name="pref_song_folder">Songs folder</string>
    <string name="pref_song_folder_descr">Folder for saving songs after downloading</string>

    <string name="pref_album_folder">Albums folder</string>
    <string name="pref_album_folder_descr">Folder for saving albums after downloading</string>

    <string name="pref_image_folder">Images folder</string>
    <string name="pref_image_folder_descr">Folder for saving images after downloading</string>

    <string name="pref_language">Choose language for content</string>
    <string name="pref_language_descr">Language of information about artists, albums, etc.</string>

    <!--   File chooser   -->
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="loading">Loading</string>
    <string name="save_here">Save here</string>
    <string name="press_one_more_to_exit">Press one more to exit</string>

    <!--     Header in history fragment    -->
    <string name="search_history_title">History</string>

    <!--    Tabs in music fragment  -->
    <string name="all_music">All music</string>
    <string name="downloaded_music">Loaded music</string>

    <!--     MISC    -->
    <string name="cannot_play_song">Cannot play the song</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="song_downloading">Song is downloading</string>
    <string name="song_downloading_error">Some songs was not downloaded</string>
    <string name="downloading_finish">All songs downloaded successfully</string>
    <string name="file_already_exists">The song already downloaded</string>
    <string name="already_in_queue">The song is already downloading</string>
    <string name="waiting">Waiting...</string>
    <string name="song_added_to_current_list">The song %s has added to current play list</string>
    <string name="back">Back</string>
    <string name="show_playlist">Show playlist</string>
    <string name="hide_playlist">Hide playlist</string>
    <string name="current">Current value: "</string>
</resources>
