<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_key_storage_settings"
                        android:title="@string/pref_storage_title">

        <CheckBoxPreference android:title="@string/pref_use_one_folder"
                            android:key="use_one_folder"
                            android:summary="@string/pref_use_one_folder_descr"/>

        <Preference android:title="@string/pref_song_folder"
                    android:summary="@string/pref_song_folder_descr"
                    android:key="songs_fodler"/>

        <EditTextPreference android:title="Password"
                            android:key="password"
                            android:summary="Please maintain your password"/>
    </PreferenceCategory>
</PreferenceScreen>